Fixed overlapping width

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -39,6 +39,10 @@ body {
     }
 }
 
+.custom-gray-bg {
+    background: #f5f5f5;
+}
+
 #projekte {
     height: 100%;
     padding: 0;
@@ -49,12 +53,16 @@ body {
     
     .row {
         height: 100%;
+        margin:0;
 
-        #projekte-slide-1 {
-            background: url(../img/1_3.jpg); 
+        .col-lg-6 {
             height: 70%;
+            padding: 0;
 
-            @include bg-image;
+            &#projekte-slide-1 {
+                background: url(../img/1_3.jpg); 
+                @include bg-image;
+            }
         }
     }
 }
